# dao-nft-solana

./: .prettierrc.json  Anchor.toml  README.md  package.json
programs/gat-dao-nft-solana/: Cargo.toml
programs/gat-dao-nft-solana/src/: lib.rs
programs/gat-dao-nft-solana/src/cross_programs/: nft.rs
programs/gat-dao-nft-solana/src/helpers/: constants.rs  errors.rs  events.rs  mod.rs  signature.rs  types.rs  utils.rs
programs/gat-dao-nft-solana/src/helpers/enums/: mod.rs  vote_by.rs
programs/gat-dao-nft-solana/src/instructions/: mod.rs
programs/gat-dao-nft-solana/src/instructions/governance/: ban.rs  initialize.rs  kyc.rs  mod.rs
programs/gat-dao-nft-solana/src/instructions/readers/: mod.rs  reclaim_nft.rs  vote.rs
programs/gat-dao-nft-solana/src/instructions/writers/: create_proposal.rs  initialize.rs  mod.rs  role_control.rs
programs/gat-dao-nft-solana/src/schemas/: access_control.rs  dao_info.rs  governance_info.rs  mod.rs  proposal_info.rs  reader_unreclaim_nfts.rs  vote_logging.rs  writer_info.rs
tests/: gat-dao-nft-solana.ts
